--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,8 @@
     ],
     "routes": [
       {
-        "src": "/(tampilan*)",
-        "dest": "/index.js"
+        "src": "/(.*)",
+        "dest": "/tampilan"
       }
     ]
   }
