--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,8 @@
         "src": "/(.*)",
         "dest": "/tampilan"
       }
-    ]
+    ],
+    "redirects": [
+    { "source": "/tampilan", "destination": "/index.html", "permanent": false }
+  ]
   }
