Update vercel.json c

--- a/vercel.json
+++ b/vercel.json
@@ -2,17 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "./index.js",
+        "src": "index.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/tampilan"
+        "dest": "/index.js"
       }
-    ],
-    "redirects": [
-    { "source": "/tampilan", "destination": "/index.html", "permanent": false }
-  ]
+    ]
   }
